# cli-test

./: Cargo.toml  README.md
examples/: count_lines.clts
src/: cli.rs  common.rs  lib.rs  main.rs  parse.rs  scan.rs
