[package]
name = "cli-test"
version = "0.1.0"
edition = "2021"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://github.com/mverleg/steel"
license = "Apache-2.0"
publish = true

[lib]
name = "clitest"
path = "src/lib.rs"

[[bin]]
name = "cli-test"
path = "src/main.rs"

[dependencies]
#serde = { version = "1.0.157", features = ["derive"] }
#serde_json = "1.0.94"
#bincode = "2.0.0-rc.2"
log = "0.4.17"
#tinyvec = "1.6.0"
clap = { version = "4.1.10", default-features = true, features = ["std", "derive", "unicode"] }
#env_logger = "0.10.0"
#regex = "1.7.1"
#itertools = "0.10.5"
#time = { version = "0.3.20", features = ["serde"] }
env_logger = "0.10.0"
#sha2 = "0.10.6"
#dashmap = "5.4.0"
